objects/Historical_Data_Change__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>Schedule__r.DealAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Schedule__r.DealBrand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Schedule__r.DealProgram__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rate Change</fullName>
                </value>
                <value>
                    <fullName>Spot Separation</fullName>
                </value>
                <value>
                    <fullName>Wrong Rate</fullName>
                </value>
                <value>
                    <fullName>Wrong Units Available</fullName>
                </value>
                <value>
                    <fullName>Wrong Traffic</fullName>
                </value>
                <value>
                    <fullName>Incorrect Times Selected</fullName>
                </value>
                <value>
                    <fullName>Incorrect Dayparts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>Schedules__c</referenceTo>
        <relationshipLabel>Historical Data Changes</relationshipLabel>
        <relationshipName>Historical_Data_Changes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Historical Data Change</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HDC-{00000}</displayFormat>
        <label>Historical Data Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Data Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>